[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
# origin
# TODO
# 01-pare.rs
syn = { version = "2.0.39", features = ["extra-traits"] }
# 02-create-builder.rs
quote = "1.0.33"
